<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">$钱$</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="add_record">Add Record</string>
	
	<string name="add_record_back">BACK</string>
	<string name="add_record_add">ADD</string>
	<string name="add_record_showrecord">SHOW_RECORD</string>
	<string name="add_record_new">添加记录</string>
	
	<string name="add_record_table_title0">Date   :</string>
	<string name="add_record_table_title1">Type   :</string>
	<string name="add_record_table_title2">Cost   :</string>
	<string name="add_record_table_title3">Note   :</string>
	
	<string name="cost_today_title">当日共消费（元）</string>
	<string name="cost_today_title_cost">0.0</string>
	<string name="cost_total_title">总共消费（元）</string>
	<string name="cost_total">0.0</string>
	
	<string name="cost_summary_weekt">本周消费（元）</string>
	<string name="cost_summary_week">0.0</string>
	<string name="cost_summary_montht">本月消费（元）</string>
	<string name="cost_summary_month">0.0</string>
	<string name="cost_summary_hyeart">半年消费（元）</string>
	<string name="cost_summary_hyear">0.0</string>
	<string name="cost_summary_yeart">本年消费（元）</string>
	<string name="cost_summary_year">0.0</string>
	
	<string name="cost_chart_title">近7天消费记录</string>
	<string-array name="add_record_type">
	    <item >餐饮</item>
	    <item >衣物</item>
	    <item >娱乐</item>
	    <item >其它</item>
	</string-array>
	
	<string name="menu_show_name">查看消费明细</string>
	<string name="cost_list_more">加载更多...</string>
</resources>
